<resources>
    <string name="app_name">QLive</string>

    <string name="action_logout">退出账号</string>
    <string name="action_login">已有账号，去登录</string>
    <string name="action_signup">没有账号，去注册</string>

    <string name="title_section_stream">直播节目</string>
    <string name="title_section_video">点播节目</string>
    <string name="title_section_channel">我的频道</string>

    <string name="title_activity_main">七牛直播秀</string>
    <string name="title_activity_login">账号登录</string>
    <string name="title_activity_signup">账号注册</string>

    <string name="title_activity_live_info">直播信息</string>
    <string name="title_activity_my_live_video_list">我的录制记录</string>
    <string name="title_activity_stream_play">直播播放</string>
    <string name="title_activity_video_play">点播播放</string>

    <string name="stream_title">节目标题</string>
    <string name="stream_quality">录制品质</string>
    <string name="stream_orientation">录制方向</string>
    <string name="start_record">开始录制</string>

    <string name="string_state_ready">准备好</string>
    <string name="string_state_preparing">准备中</string>
    <string name="string_state_connecting">连接中</string>
    <string name="string_state_streaming">推流中</string>
    <string name="string_state_netblocking">网络故障, 停止</string>
    <string name="string_state_con_timeout">连接超时</string>
    <string name="string_state_open_camera_fail">打开摄像头失败</string>
    <string name="string_state_disconnet">连接中断</string>
    <string name="string_state_invalid_url">非法的推流地址</string>

    <string name="share_my_live_play_urls">分享我的直播播放地址</string>

    <string name="flash_light_on">Torch</string>
    <string name="flash_light_off">UnTorch</string>

    <string-array name="stream_quality_list">
        <item>普通</item>
        <item>标清</item>
        <item>高清</item>
        <item>超高清</item>
    </string-array>
    <string-array name="stream_orientation_list">
        <item>横拍</item>
        <item>竖拍</item>
    </string-array>

    <string name="cd_tv_log_info">cd_tv_log_info</string>
    <string name="cd_tv_stream_status">cd_tv_stream_status</string>
    <string name="cd_btn_mute">cd_btn_mute</string>
    <string name="cd_btn_torch">cd_btn_torch</string>
    <string name="cd_btn_capture">cd_btn_capture</string>
    <string name="cd_btn_orientation">cd_btn_orientation</string>
    <string name="cd_btn_camera_switcher">cd_btn_camera_switcher</string>
    <string name="switch_orientation_hint">Encoding orientation had been changed. Stop streaming first and restart streaming will take effect</string>
    <string name="cd_btn_fb">cd_btn_fb</string>

</resources>
